Fixes #660: Enable wrapping for CompanyWidget comments in Chrome (#822)

--- a/assets/styles/generator.scss
+++ b/assets/styles/generator.scss
@@ -156,6 +156,10 @@ textarea:placeholder-shown + label.fancy-label {
         margin-top: 15px;
         float: left;
     }
+
+    .company-comments {
+        overflow-wrap: anywhere;
+    }
 }
 
 #form-container {
